--- a/views/document.ejs
+++ b/views/document.ejs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOCUMENT</title>
     <script src="https://cdn.socket.io/3.1.3/socket.io.js"></script>
+    <link rel="stylesheet" href="document.css">
 </head>
 <body>
 <h1 id="demo">ONLINE NOTE SHARING</h1>
 <textarea id="w3review" name="w3review" rows="25" cols="50" style="border-radius:10px;">
-
+<div class="share_icon"><img src="share_user.png" alt="share"></div>
 </textarea>
 <script src="document.js"></script>
 </body>
