--- a/views/document.ejs
+++ b/views/document.ejs
@@ -12,7 +12,7 @@
 <textarea id="w3review" name="w3review" rows="25" cols="50" style="border-radius:10px;">
 
 </textarea>
-<div class="share_icon"><img src="share_user.png" alt="share"></div>
+<div class="share_icon"><img id="share_user" src="share_user.png" alt="share"></div>
 <script src="document.js"></script>
 </body>
 </html>
