--- a/public/document.css
+++ b/public/document.css
@@ -1,6 +1,10 @@
 .share_icon{
     justify-content: center;
     align-items: center;
-    width:20px;
-    height: 20px;
+    width:50px;
+    height: 50px;
+}
+#share_user{
+    width: 50px;
+    height: 50px;
 }
