--- a/public/document.css
+++ b/public/document.css
@@ -3,6 +3,8 @@
     align-items: center;
     width:50px;
     height: 50px;
+    border-radius:5px;
+    border: 1px solid black;
 }
 #share_user{
     width: 50px;
