--- a/views/document.ejs
+++ b/views/document.ejs
@@ -18,7 +18,9 @@
 <textarea id="w3review" name="w3review" rows="25" cols="50" style="border-radius:10px;">
 
 </textarea>
-
+<ul id="online_users_list">
+    
+</ul> 
 <div class="share_doc_root">
     <div class="cross_sign_share_doc">
         <div class="cross_sign"></div>
